# kcolorchooser

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  kcolorchooser.cpp  kcolorchooser.desktop  org.kde.kcolorchooser.appdata.xml  org.kde.kcolorchooser.desktop  snapcraft.yaml
po/ar/: kcolorchooser.po
po/ast/: kcolorchooser.po
po/az/: kcolorchooser.po
po/be/: kcolorchooser.po
po/bg/: kcolorchooser.po
po/bs/: kcolorchooser.po
po/ca/: kcolorchooser.po
po/ca@valencia/: kcolorchooser.po
po/cs/: kcolorchooser.po
po/da/: kcolorchooser.po
po/de/: kcolorchooser.po
po/el/: kcolorchooser.po
po/en_GB/: kcolorchooser.po
po/eo/: kcolorchooser.po
po/es/: kcolorchooser.po
po/et/: kcolorchooser.po
po/eu/: kcolorchooser.po
po/fi/: kcolorchooser.po
po/fr/: kcolorchooser.po
po/ga/: kcolorchooser.po
po/gl/: kcolorchooser.po
po/he/: kcolorchooser.po
po/hi/: kcolorchooser.po
po/hne/: kcolorchooser.po
po/hr/: kcolorchooser.po
po/hu/: kcolorchooser.po
po/ia/: kcolorchooser.po
po/is/: kcolorchooser.po
po/it/: kcolorchooser.po
po/ja/: kcolorchooser.po
po/ka/: kcolorchooser.po
po/kk/: kcolorchooser.po
po/km/: kcolorchooser.po
po/ko/: kcolorchooser.po
po/ku/: kcolorchooser.po
po/lt/: kcolorchooser.po
po/lv/: kcolorchooser.po
po/mk/: kcolorchooser.po
po/ml/: kcolorchooser.po
po/mr/: kcolorchooser.po
po/nb/: kcolorchooser.po
po/nds/: kcolorchooser.po
po/nl/: kcolorchooser.po
po/nn/: kcolorchooser.po
po/oc/: kcolorchooser.po
po/pa/: kcolorchooser.po
po/pl/: kcolorchooser.po
po/pt/: kcolorchooser.po
po/pt_BR/: kcolorchooser.po
po/ro/: kcolorchooser.po
po/ru/: kcolorchooser.po
po/sa/: kcolorchooser.po
po/si/: kcolorchooser.po
po/sk/: kcolorchooser.po
po/sl/: kcolorchooser.po
po/sq/: kcolorchooser.po
po/sr/: kcolorchooser.po
po/sr@ijekavian/: kcolorchooser.po
po/sr@ijekavianlatin/: kcolorchooser.po
po/sr@latin/: kcolorchooser.po
po/sv/: kcolorchooser.po
po/ta/: kcolorchooser.po
po/th/: kcolorchooser.po
po/tr/: kcolorchooser.po
po/ug/: kcolorchooser.po
po/uk/: kcolorchooser.po
po/vi/: kcolorchooser.po
po/wa/: kcolorchooser.po
po/zh_CN/: kcolorchooser.po
po/zh_TW/: kcolorchooser.po
